# StockTracker

./: README.txt  app.py  dependencies.txt  forms.py  pyproject.toml  requirements.txt  routes.py  utils.py  yfinance_api.py
static/css/: style.css
static/js/: charts.js
templates/: 404.html  500.html  base.html  favorites.html  index.html  preferences.html  search.html  stock_detail.html
