[project]
name = "stock-tracker"
version = "0.1.0"
description = "A simple stock tracking application that displays real-time and historical stock data using Yahoo Finance API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",           # Web framework
    "flask-wtf>=1.2.2",       # Form handling and CSRF protection
    "wtforms>=3.2.1",         # Form validation
    "requests>=2.32.3",       # HTTP requests for API calls
    "yfinance>=0.2.61",       # Yahoo Finance API wrapper
    "gunicorn>=23.0.0",       # Production WSGI server
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
